      The method was size(history) and not desirable. (Robert Collins)

    * ``VersionedFile.get_graph_with_ghosts`` is deprecated, with no
      replacement method.  The method was size(history) and not desirable.
      (Robert Collins)

    * ``VersionedFile.get_parents`` is deprecated, please use
      ``VersionedFile.get_parent_map``. (Robert Collins)

    * ``VersionedFile.has_ghost`` is now deprecated, as it is both expensive
      and unused outside of a single test. (Robert Collins)

    * ``VersionedFile.iter_parents`` is now deprecated in favour of
      ``get_parent_map`` which can be used to instantiate a Graph on a
      VersionedFile. (Robert Collins)

    * ``VersionedFileStore`` no longer uses the transaction parameter given
      to most methods; amongst other things this means that the
      get_weave_or_empty method no longer guarantees errors on a missing weave
      in a readonly transaction, and no longer caches versioned file instances
      which reduces memory pressure (but requires more careful management by
      callers to preserve performance.  (Robert Collins)

  TESTING:

    * New -Dselftest_debug flag disables clearing of the debug flags during
      tests.  This is useful if you want to use e.g. -Dhpss to help debug a
      failing test.  Be aware that using this feature is likely to cause
      spurious test failures if used with the full suite. (Andrew Bennetts)

    * selftest --load-list now uses a new more agressive test loader that will
      avoid loading unneeded modules and building their tests. Plugins can use
      this new loader by defining a load_tests function instead of a test_suite
      function. (a forthcoming patch will provide many examples on how to
      implement this).
      (Vincent Ladeuil)

    * selftest --load-list now does some sanity checks regarding duplicate test
      IDs and tests present in the list but not found in the actual test suite.
      (Vincent Ladeuil)
